# SpaceWar

./: .gitignore  CMakeLists.txt  README.md
include/core/: Game.hpp
include/entities/: Decorative.hpp  Enemy.hpp  Entity.hpp  Neutral.hpp  Player.hpp  Projectile.hpp
include/extras/: Animation.hpp  AudioManager.hpp  Logo.hpp  PlayerControls.hpp  Text.hpp
include/systems/: DecorativeSpawner.hpp  EnemyFactory.hpp
include/utils/: Config.hpp
src/: main.cpp
src/core/: Game.cpp
src/entities/: Decorative.cpp  Enemy.cpp  Entity.cpp  Neutral.cpp  Player.cpp  Projectile.cpp
src/extras/: Animation.cpp  AudioManager.cpp  Logo.cpp  Text.cpp
src/systems/: DecorativeSpawner.cpp  EnemyFactory.cpp
